tests/integration/fail/merge_contract.ncl
# test = 'error'
#
# [metadata]
# error = 'EvalError::BlameError'
let r = { a = 2 } & { a | Bool } in r.a
